Move to database

--- a/views/room.pug
+++ b/views/room.pug
@@ -24,7 +24,7 @@ block content
       li 
        span.codename #{val.codename}:
        | 
-       | #{val.post}
+       | #{val.comment}
  
   textarea(id="chatbox", cols="30", rows="10")
   button(id="post-chat" onclick="postChat()") Post
