Various small cleanup

--- a/views/room.pug
+++ b/views/room.pug
@@ -8,9 +8,9 @@ block content
   p All are welcome at Club #{title}, but to sign the guestbook or leave a comment, you must be a fingerprinted member.
 
   h3
-   | Your codename is 
+   | Your codename is "
    span#codename.codename
-   | .
+   |" .
   p
     em Codenames are stored in localStorage. If that gets flushed, you'll lose your name.
 
