--- a/views/layout.pug
+++ b/views/layout.pug
@@ -29,3 +29,9 @@ html
 
     block content
     p#error
+    div#footer
+      block footer
+        p 
+          | View Source on 
+          a(href='https://github.com/JacksonKearl/FingrPrintr') GitHub
+          | .
