Style changes and vague inoput validation

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -17,9 +17,7 @@ a {
 
 #footer {
   box-sizing: border-box;
-  padding-left: 50px;
-  padding-right: 50px;
-  padding-bottom: 20px;
+  padding: 10px 20px;
   position: fixed;
   left: 0;
   bottom: 0;
@@ -36,9 +34,14 @@ button {
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
+  background-color: aliceblue;
+}
+
+button:hover {
+  filter:brightness(85%);
 }
 
 button.primary {
-  background-color: #4CAF50; /* Green */
+  background-color: #4CAF50;
   color: white;
 }
