--- a/views/index.pug
+++ b/views/index.pug
@@ -17,8 +17,9 @@ block content
     li Use the latest FireFox
   p And etc. 
   p So I devised this application, which gives each fingerprint a unique "chatroom" that other sharers of the same fingerprint can communicate in.
-  p Perhaps my theory is totally wrong and everyone will be placed in a solitary room. But perhaps it isn't, in which case we might be able to be a bit less worried about the big scary world of fingerprinting.
-  p My assigned chatrooms on my MBP are:
+  p Perhaps my theory is totally wrong and everyone will be placed in a solitary room. 
+  p But perhaps it isn't, you're about to enter a room full of people who are just like you, technologically and geographically, but that you never have (and likely never will) meet. 
+  p My assigned chatrooms on my MBP (15", 2016, yes I hate the touchbar and the keyboard, thanks for asking) are: 
   ul
     li 
       | Firefox 67.0: 
@@ -27,11 +28,13 @@ block content
       | Chrome  74.0.3729.169: 
       a(href='/room/0xcafe7beccb523') 0xcafe7beccb523
     li
-      | Safari 12.1.1:
+      | Safari 12.1.1: 
       a(href='/room/0x1dde373c1119d4') 0x1dde373c1119d4
+  p 
+    | And on my iPhone 8 Plus, iOS 12.2: 
+    a(href='/room/0xb7eb41ef87c6a') 0xb7eb41ef87c6a
 
   p Note: Ad Blockers sometimes block these fingerprinting scripts. Fingerprinting should be fast, if it seems to hang, that could be why.
-  button.primary(onclick="runFingerprint()") Enter Your Chatroom 
-  p#loading
+  button#loading.primary(onclick="runFingerprint()") Enter Your Chatroom 
   p GDPR Stuff: I don't collect any PII (fingerprints are hashed before transmission and no IPs are logged). Your session will not be persisted on the server without your explicit signing of the "guestbook" or leaving a comment. In those cases, your browser fingerprint hash and a randomly generated user ID will be saved on the server. Neither of these are traceable back to you. There are no trackers on this website. (I'm not sure if any of that actually addresses any GDPR concerns, but I figure it's good to know anyways) 
   p Note: At no point will this website fingerprint your computer without a corresponding button press. That being said, it is safe to assume a fingerprinting will occur every time you press a button on this website.
