--- a/index.css
+++ b/index.css
@@ -148,7 +148,7 @@ input[type="submit"]:hover {
 }
 
 #index main {
-    width: 50%;
+    flex-grow: 0;
     margin: 0 auto;
     margin-top: 10px;
 }
