--- a/index.css
+++ b/index.css
@@ -8,6 +8,7 @@ body {
     padding: 5px;
     text-align: center;
     height: 100vh;
+    height: 100svh;
     background-color: wheat;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     display: flex;
