--- a/index.css
+++ b/index.css
@@ -43,6 +43,7 @@ input:focus-visible {
 	outline-style: none;
 }
 
+input[type='submit']:disabled,
 input[readonly] {
 	outline: 0;
 	filter: none !important;
